--- a/style.css
+++ b/style.css
@@ -4,42 +4,35 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 
 #card-container {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 
 .face-down-cards {
-  width: 100px;
-}
+  width: 100px; }
 
 #game-info {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
-}
+  align-items: center; }
 
 #game-button {
-  margin: 40px;
-}
+  margin: 40px; }
 
 button {
-  margin: 20px;
-}
+  margin: 20px; }
 
-#placeholderRight, #placeholderLeft {
+#placeholderLeft, #placeholderRight {
   background-color: white;
   width: 110px;
   height: 150px;
   color: black;
   font-size: 90px;
-  text-align: center;
-}
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
